--- a/paper/ecir25-longeval-part4.tex
+++ b/paper/ecir25-longeval-part4.tex
@@ -3,11 +3,6 @@
 We evaluate our counterfactual query rewriting in the LongEval scenario that comes with overlapping queries across six points in time between June~2022 and August~2023~\cite{alkhalifa:2023,alkhalifa:2024,galuscakova:2023}. We modify the LongEval datasets to focus on queries that re-occur across multiple timestamps to study the effects of evolving documents. We evaluate the retrieval effectiveness of all approaches and use an ablation study to investigate if they generalize beyond previously known relevant documents.
 
 \subsection{Experimental Setup}
-
-% We modify the LongEval corpora~\cite{alkhalifa:2023,alkhalifa:2024,galuscakova:2023} to evaluate retrieval effectiveness for re-occuring queries over time. 
-
-% LongEval provides queries, documents, and relevance judgments derived by click models for six months between June~2022 and August~2023. The documents, queries and clicks were sampled from Qwant so that the queries rather do not change their intent over time~\cite{galuscakova:2023} while documents might be updated, deleted, or newly created. For each timestamp, we remove queries that did not occur at least in one earlier timestamp, leaving us with 5~timestamps for evaluation between July~2022 and August~2023~(between 169~and 298~test queries; June~2022 is skipped as no previous logs are available). Figure~\ref{fig:query-overlap} provides an overview of the re-occuring queries between the different timestamps. For instance, 138~queries from June~2023 re-occur in August~2024, forming the biggest time gap in our evaluation scenario, whereas the smallest time gap occurs for the 150~queries from June~2023 that re-occur in July~2023.
-
 The LongEval test collection~\cite{galuscakova:2023} comprises documents, queries, and clicks sampled from the French web search engine Qwant. For each timestamp, we remove queries that did not occur at least in one earlier timestamp, leaving us with 5~timestamps for evaluation between July~2022 and August~2023~(between 169~and 298~test queries; June~2022 is skipped as no previous logs are available). Figure~\ref{fig:query-overlap} provides an overview of the re-occurring queries between the different timestamps. For instance, 138~queries from June~2023 re-occur in August~2024, forming the biggest time gap in our evaluation scenario, whereas the smallest time gap occurs for the 150~queries from June~2023 that re-occur in July~2023.
 
 In our retrieval experiments, we contrast five baselines with our three approaches. We use BM25~\cite{robertson:1994}, BM25 with RM3 expansion (both implemented in PyTerrier~\cite{macdonald:2020}), ColBERT~\cite{khattab:2020}, List-in-T5~\cite{tamber:2023}, and monoT5~\cite{nogueira:2020}. We keep all the default hyperparameters for all baselines. We also implement our three approaches in PyTerrier using BM25 as the underlying retrieval model. For boosting (BM25$_{Boost}$), we set $\lambda=0.7$ and $\mu=2$ based on previous experiments~\cite{keller:2024b}. For relevance feedback (BM25$_{RF}$), $k=10$ feedback terms are used as this is also the default for RM3 in PyTerrier. For keyqueries (BM25$_{keyquery}$), we also use 10~feedback terms as vocabulary aiming at queries that retrieve the target tocuments to the top-10 while having more than 25~results.
@@ -33,7 +28,7 @@ In our retrieval experiments, we contrast five baselines with our three approach
 
 \subsection{Evolution of Documents in the LongEval Corpora over Time}
 
-The documents in the corpora may evolve via deletion, creation, or updates to the content. Depending on the point in time, between one and 2.5~million documents are available. Across all timestamps, 1.7~million documents are deleted and 2.6~million documents are created. We measure how re-occuring documents changed over time by inspecting their pairwise similarities. We measured the similarity with the $S_{3}$ score~\cite{bernstein:2005} implemented in CopyCat~\cite{froebe:2021a} at default configuration (1~indicates identical documents, 0~documents without any overlap) as this score was specifically developed to identify redundant documents within retrieval scenarios~\cite{bernstein:2005}. Figure~\ref{fig:document-similarities} shows the $S_{3}$ similarities for all documents with overlapping URLs across all timestamps, indicating that 40\,\% of documents do not change their content~($S_{3}=1.0$), whereas around 50\,\% have an $S_{3}$ similarity below~0.8 that indicate non-negligible changes (prior research used 0.82~as near-duplicate threshold on Web corpora~\cite{froebe:2021a}). Given that the LongEval corpora evolve only slightly among the timestamps, we include an ablation study that removes all overlap to analyze how approaches generalize.
+The documents in the corpora may evolve via deletion, creation, or updates. Between one and 2.5~million documents are available, with 1.7~million documents beeing deleted and 2.6~million documents beeing created over the snapshots. We measure how re-occuring documents changed over time by inspecting their pairwise similarities. We measured the similarity with the $S_{3}$ score~\cite{bernstein:2005} implemented in CopyCat~\cite{froebe:2021a} at default configuration (1~indicates identical documents, 0~documents without any overlap) as this score specifically aims to identify redundant documents in retrieval scenarios~\cite{bernstein:2005}. Figure~\ref{fig:document-similarities} shows the $S_{3}$ similarities for all document pairs, indicating that 40\,\% do not change their content~($S_{3}=1.0$), whereas around 50\,\% have an $S_{3}$ similarity below~0.8 that indicate non-negligible changes (prior research used 0.82~as near-duplicate threshold on the Web~\cite{froebe:2021a}). Given that the LongEval corpora evolve only slightly, we include an ablation study that removes all overlap to analyze how approaches generalize.
 
 
 
