--- a/paper/ecir25-longeval-part4.tex
+++ b/paper/ecir25-longeval-part4.tex
@@ -1,9 +1,10 @@
 \section{Evaluation}
 
+\enlargethispage*{2\baselineskip}
 We evaluate our counterfactual query rewriting in the LongEval scenario that comes with overlapping queries across six points in time between June~2022 and August~2023~\cite{alkhalifa:2023,alkhalifa:2024,galuscakova:2023}. We modify the LongEval datasets to focus on queries that re-occur across multiple timestamps to study the effects of evolving documents. We evaluate the retrieval effectiveness of all approaches and use an ablation study to investigate if they generalize beyond previously known relevant documents.
 
 \subsection{Experimental Setup}
-The LongEval test collection~\cite{galuscakova:2023} comprises documents, queries, and clicks sampled from the French web search engine Qwant. For each timestamp, we remove queries that did not occur at least in one earlier timestamp, leaving us with 5~timestamps for evaluation between July~2022 and August~2023~(between 169~and 298~test queries; June~2022 is skipped as no previous logs are available). Figure~\ref{fig:query-overlap} provides an overview of the re-occurring queries between the different timestamps. For instance, 138~queries from June~2023 re-occur in August~2024, forming the biggest time gap in our evaluation scenario, whereas the smallest time gap occurs for the 150~queries from June~2023 that re-occur in July~2023.
+The LongEval test collection~\cite{galuscakova:2023} comprises documents, queries, and clicks sampled from the French web search engine Qwant. For each timestamp, we remove queries that did not occur at least in one earlier timestamp, leaving us with 5~timestamps for evaluation between July~2022 and August~2023~(between 169~and 298~test queries; June~2022 is skipped as no previous logs are available). Figure~\ref{fig:query-overlap} provides an overview of the re-occurring queries between the different timestamps. For instance, 138~queries from June~2023 re-occur in August~2024, forming the biggest time gap in our evaluation scenario.
 
 In our retrieval experiments, we contrast five baselines with our three approaches. We use BM25~\cite{robertson:1994}, BM25 with RM3 expansion (both implemented in PyTerrier~\cite{macdonald:2020}), ColBERT~\cite{khattab:2020}, List-in-T5~\cite{tamber:2023}, and monoT5~\cite{nogueira:2020}. We keep all the default hyperparameters for all baselines. We also implement our three approaches in PyTerrier using BM25 as the underlying retrieval model. For boosting (BM25$_{Boost}$), we set $\lambda=0.7$ and $\mu=2$ based on previous experiments~\cite{keller:2024b}. For relevance feedback (BM25$_{RF}$), $k=10$ feedback terms are used as this is also the default for RM3 in PyTerrier. For keyqueries (BM25$_{keyquery}$), we also use 10~feedback terms as vocabulary aiming at queries that retrieve the target tocuments to the top-10 while having more than 25~results.
 
@@ -32,13 +33,12 @@ The documents in the corpora may evolve via deletion, creation, or updates. Betw
 
 
 
+\enlargethispage*{2\baselineskip}
 \subsection{Retrieval Effectiveness}
-
-
 \input{table-results}
 
-We evaluate the effectiveness of our five baselines and our three approaches using nDCG@10. However, as the relevance labels of the LongEval corpus are derived from click logs based on unknown rankings, unjudged documents strongly impact the evaluation. In this scenario, it is recommendet to remove unjudged documents to mitigate their impact~\cite{sakai:2007} which we additionally report as nDCG@10$^{'}$. Table~\ref{tab:table-results} shows the results. ColBERT, List-in-T5, and monoT5 outperform the BM25 baseline in most cases, whreas BM25 with RM3 expansion does not substantially differ from BM25. Our three approaches substantially outperform all five baselines (nDCG$^{'}$ is higher than all five baselines across all timestamps). After removing the undesired impact of unjudged documents, both BM25$_{RF}$ and BM25$_{keyquery}$ outperform BM25$_{Boost}$, indicating that these approches generalize to newly created or modified documents. Keyqueries are the most effective approach in all cases, outperforming the best transformer by a large margin.
+We evaluate the effectiveness of our five baselines and our three approaches using nDCG@10. As the relevance labels of the LongEval corpus are derived from click logs, unjudged documents strongly impact the evaluation. In this scenario, it is recommendet to remove unjudged documents~\cite{sakai:2007} which we report as nDCG@10$^{'}$. Table~\ref{tab:table-results} shows the results. ColBERT, List-in-T5, and monoT5 outperform the BM25 baseline in most cases, whreas BM25 with RM3 expansion does not substantially differ from BM25. Our three approaches substantially outperform all five baselines (nDCG$^{'}$ is always higher). After removing the undesired impact of unjudged documents, both BM25$_{RF}$ and BM25$_{keyquery}$ outperform BM25$_{Boost}$, indicating that these approches generalize to newly created or modified documents. Keyqueries are the most effective approach in all cases, outperforming the best transformer by a large margin.
 
 \input{table-results-fold}
 
-To verify if the improvements of BM25$_{RF}$ and BM25$_{keyquery}$ come, as expected, from a generalization beyound previously known relevant documents, we conduct an ablation study where we remove all documents that occur in previous timestamps from the runs and relevance judgments of each timestamp and evaluate nDCG$^{'}$. This way, all documents in the evaluation have never been seen before. Table~\ref{tab:table-results-fold} shows the results of the ablation study as improvement upon BM25 for our three approaches. As BM25$_{Boost}$ can not generalize to new documents, they never improve (improvement is always~$+0.0$). However, both BM25$_{RF}$ and BM25$_{keyquery}$ generalize as they almost always improve the effectiveness on unseen documents, even significant on Januar~2024.
+We conduct an ablation study to analyze if the improvements of BM25$_{RF}$ and BM25$_{keyquery}$ come from a generalization beyound previously known relevant documents. We remove all documents that occur in previous timestamps from the runs and relevance judgments and evaluate nDCG$^{'}$. This way, all remaining documents have never been seen before. Table~\ref{tab:table-results-fold} shows the results as improvement upon BM25 for our three approaches. As BM25$_{Boost}$ can not generalize to new documents, they never improve (improvement is always~$+0.0$). However, both BM25$_{RF}$ and BM25$_{keyquery}$ generalize to unseen documents.
