--- a/paper/table-results-fold.tex
+++ b/paper/table-results-fold.tex
@@ -2,7 +2,7 @@
 \small
 \centering
 \renewcommand{\tabcolsep}{2.8pt}
-\caption{Ablation study showing the improvement upon BM25 in terms of nDCG@10$^{'}$ ($\pm$ std-dev) on newly added documents at a timestamp that were never seen before, analyzing which approaches generalize to new documents. $^{*}$ marks Bonferroni corrected significance for students t-test.}
+\caption{Ablation study showing the nDCG@10$^{'}$ improvement upon BM25  ($\pm$ std-dev) on newly added documents that were never seen before, analyzing how approaches generalize. $^{*}$ marks Bonferroni corrected significance for students t-test.}
 \label{tab:table-results-fold}
 
 \begin{tabular}{@{}lcccccccccc@{}}
