--- a/paper/ecir25-longeval-part1.tex
+++ b/paper/ecir25-longeval-part1.tex
@@ -1,6 +1,7 @@
 \section{Introduction}
 
-Many of the queries a search engine receives have been seen before~\cite{DBLP:journals/sigir/SilversteinHMM99}. By analyzing how users interact with the displayed results for these queries, valuable relevance indicators can be gathered. Such signals can be used to improve the search engine's effectiveness, e.g., by constructing click models that synthesize a relevance indicator~\cite{chuklin:2015}. These synthesized labels can be used to boost documents~\cite{keller:2024b}, to train learning-to-rank models~\cite{liu:2011}, or to fine-tune transformer models~\cite{lin:2021}. While the training and fine-tuning of models often require huge amounts of labeled data, boosting also works with few labels~\cite{keller:2024b}. However, it might only be applied for a very short time after relevance information have been observed, as queries, documents, and relevance may evolve~\cite{keller:2024}. For instance, boosting would fail when documents are deleted or change their content so that they are not relevant to the query anymore (exemplified in Table~\ref{table-examples}).
+
+Many queries a search engine receives have been seen before~\cite{DBLP:journals/sigir/SilversteinHMM99}. Analyzing how users interact with the results of these queries yields valuable relevance indicators that can improve the search engine's effectiveness, e.g., by constructing click models that synthesize a relevance indicator~\cite{chuklin:2015}. These synthesized labels can be used to boost documents~\cite{keller:2024b}, to train learning-to-rank models~\cite{liu:2011}, or to fine-tune transformer models~\cite{lin:2021}. While the training and fine-tuning of models often require huge amounts of labeled data, boosting also works with few labels~\cite{keller:2024b}. However, boosting might work only shortly after relevance information has been observed, as queries, documents, and relevance may evolve~\cite{keller:2024}. For instance, boosting would fail when documents are deleted or change their content so that they are not relevant to the query anymore (exemplified in Table~\ref{table-examples}).
 
 
 \input{table-examples}
