--- a/paper/ecir25-longeval-part2.tex
+++ b/paper/ecir25-longeval-part2.tex
@@ -11,4 +11,4 @@ making them only relevant for a limited time~\cite{DBLP:conf/sigir/TikhonovBBOKG
 
 \paragraph{Query Rewriting with Keyqueries.} Given a set of target documents, a keyquery is the minimal query that retrieves the target queries within its top-positions~\cite{gollub:2013a,hagen:2016b}. Keyqueries use terms generated via RM3 or other query expansion approaches as vocabular for an efficient enumaration of candidate queries~\cite{froebe:2022c,froebe:2021c}. We use keyqueries as they, contrary to RM3, generate a ranking for each candidate to test if all criteria are fullfilled, thereby fully leveraging historical data.
 
-\paragraph{Evaluations in Dynamic Settings.} While it is well known that temporal dynamics can strongly influence the effectiveness of IR systems, the temporal dimension is rarely considered during evaluation. Soboroff~\cite{DBLP:conf/sigir/Soboroff06} initially investigated how temporal dynamics influence test collection evaluations and hypothesized how they could be maintained. Following this, the LongEval shared task~\cite{DBLP:conf/clef/AlkhalifaBDEAFG24,alkhalifa:2023} provides a test bed of an evolving web search scenario with a test collection that covers a time frame of over a year in multiple snapshots. Changes in evolving test collections can be described on a high level along the main components, the documents, topics, and qrels, and the create, update, and delete operations~\cite{keller:2024}. %While the LongEval dataset contains changes in all types of components, this study is mainly concerned with changing documents and ignore, counterfactually, changes in the relevance label.
+\paragraph{Evaluations in Dynamic Settings.} Although temporal dynamics can strongly influence the effectiveness of IR systems, they are rarely  considered during evaluation. Soboroff~\cite{DBLP:conf/sigir/Soboroff06} initially investigated how temporal dynamics influence test collection evaluations and hypothesized how they could be maintained. Recently, the LongEval shared task~\cite{DBLP:conf/clef/AlkhalifaBDEAFG24,alkhalifa:2023} provides a test bed of an evolving web search scenario as an evolving test collection covering over a year. Changes in evolving test collections can be described on a high level by the main components, documents, topics, and qrels, and the create, update, and delete operations~\cite{keller:2024}. %While the LongEval dataset contains changes in all types of components, this study is mainly concerned with changing documents and ignore, counterfactually, changes in the relevance label
