--- a/paper/ecir25-longeval-part2.tex
+++ b/paper/ecir25-longeval-part2.tex
@@ -1,14 +1,9 @@
 \section{Related Work}
 \label{sec:related-work}
 
-\paragraph{Web Dynamics.} Temporal dynamics in web search are an established research topic. Websites change constantly, often more than hourly~\cite{DBLP:conf/wsdm/AdarTDE09},
+Temporal \emph{dynamics in web search} are an established research topic. Websites change constantly, often more than hourly~\cite{DBLP:conf/wsdm/AdarTDE09},
 %; for example Adar et al.~\cite{DBLP:conf/wsdm/AdarTDE09}, found as early as 2009 that ``a large portion of pages changing more than hourly.'' 
 making them only relevant for a limited time~\cite{DBLP:conf/sigir/TikhonovBBOKG13}. This relates directly to the observation that many queries are not unique but issued frequently~\cite{DBLP:conf/sigir/Dumais14,DBLP:journals/sigir/SilversteinHMM99}. Even the same users tend to repeat the same queries at different points in time~\cite{DBLP:conf/wsdm/TylerT10}.
-
-
-\paragraph{Temporal Information Retrieval.} The observed dynamics motivate Temporal Information Retrieval (TIR) with the goal to factor temporal information to improve the ranking quality~\cite{DBLP:journals/ftir/KanhabuaBN15,DBLP:journals/csur/CamposDJJ14}. For example, Elsas and Dumais propose a ranking algorithm incorporating temporal patterns for the term weighting~\cite{DBLP:conf/wsdm/ElsasD10}.
-
-
-\paragraph{Query Rewriting with Keyqueries.} Given a set of target documents, a keyquery is the minimal query that retrieves the target queries within its top-positions~\cite{gollub:2013a,hagen:2016b}. Keyqueries use terms generated via RM3 or other query expansion approaches as vocabular for an efficient enumaration of candidate queries~\cite{froebe:2022c,froebe:2021c}. We use keyqueries as they, contrary to RM3, generate a ranking for each candidate to test if all criteria are fullfilled, thereby fully leveraging historical data.
-
-\paragraph{Evaluations in Dynamic Settings.} Although temporal dynamics can strongly influence the effectiveness of IR systems, they are rarely  considered during evaluation. Soboroff~\cite{DBLP:conf/sigir/Soboroff06} initially investigated how temporal dynamics influence test collection evaluations and hypothesized how they could be maintained. Recently, the LongEval shared task~\cite{DBLP:conf/clef/AlkhalifaBDEAFG24,alkhalifa:2023} provides a test bed of an evolving web search scenario as an evolving test collection covering over a year. Changes in evolving test collections can be described on a high level by the main components, documents, topics, and qrels, and the create, update, and delete operations~\cite{keller:2024}. %While the LongEval dataset contains changes in all types of components, this study is mainly concerned with changing documents and ignore, counterfactually, changes in the relevance label
+The observed dynamics motivate \emph{Temporal Information Retrieval} (TIR) with the goal to factor temporal information to improve the ranking quality~\cite{DBLP:journals/ftir/KanhabuaBN15,DBLP:journals/csur/CamposDJJ14}. For example, Elsas and Dumais propose a ranking algorithm incorporating temporal patterns for the term weighting~\cite{DBLP:conf/wsdm/ElsasD10}.
+Given a set of target documents, a \emph{keyquery} is the minimal query that retrieves the target queries within its top-positions~\cite{gollub:2013a,hagen:2016b}. Keyqueries use terms generated via RM3 or other query expansion approaches as vocabular for an efficient enumaration of candidate queries~\cite{froebe:2022c,froebe:2021c}. We use keyqueries as they, contrary to RM3, generate a ranking for each candidate to test if all criteria are fullfilled, thereby fully leveraging historical data.
+\emph{Evaluations in dynamic settings} is not trivial. Although temporal dynamics can strongly influence the effectiveness of IR systems, they are rarely  considered during evaluation. Soboroff~\cite{DBLP:conf/sigir/Soboroff06} initially investigated how temporal dynamics influence test collection evaluations and hypothesized how they could be maintained. Recently, the LongEval shared task~\cite{DBLP:conf/clef/AlkhalifaBDEAFG24,alkhalifa:2023} provides a test bed of an evolving web search scenario as an evolving test collection covering over a year. Changes in evolving test collections can be described on a high level by the main components, documents, topics, and qrels, and the create, update, and delete operations~\cite{keller:2024}. %While the LongEval dataset contains changes in all types of components, this study is mainly concerned with changing documents and ignore, counterfactually, changes in the relevance label
