--- a/paper/ecir25-longeval-part3.tex
+++ b/paper/ecir25-longeval-part3.tex
@@ -2,7 +2,7 @@
 
 We present three approaches that incorporate historical relevance feedback, from \Ni boosting (can not generalize), over \Nii relevance feedback (might underfit), towards \Niii keyqueries (trade-off under- vs. overfitting). These approaches were previously applied in diverse retrieval scenarios (see Section~\ref{sec:related-work}). However, we are the first to transfer them to a scenario that evolves over time.
 
-Our approaches use a set $H$~of historical relevance feedback. For each observation $(q, d, t) \in H$, $rel(q, d, t)$ is the (graded) relevance judgment for document~$d$ for query~$q$ at timestamp~$t$. As exemplified in Table~\ref{table-examples}, document~$d$ might be deleted or substantially changed in the current corpus, which is why we counterfactually use the version of the document at the previous timestamp $t$ where the relevance observation was made.
+We use a set $H$~of historical relevance feedback. For each observation $(q, d, t) \in H$, $rel(q, d, t)$ is the (graded) relevance judgment for document~$d$ for query~$q$ at timestamp~$t$. Document~$d$ might be deleted or substantially changed in the current corpus~(Table~\ref{table-examples}), which is why we counterfactually use the version of the document at the timestamp $t$ where the relevance observation was made.
 
 \paragraph{Boosting Previously Relevant Documents.} Given a ranking~$r$ obtained by some retrieval system and a set of historical relevance feedback~$H$, the boosting method directly boosts documents by their historical relevance label, no matter how much they have changed or how old the historical relevance feedback is. We apply boosting to increase the score of previously known relevant documents and decrease the score of previously known non-relevant documents. For a document~$d$ previously observed for the query~$q$ at the timestamps $t_{1}, \ldots, t_{k}$, we increase the score if it is relevant, respectively decrease the score if it is not-relevant at the corresponding timestamps using a weighting factor $\lambda^2$ and additionally boost highly relevant or non-relevant documents by a factor of $\mu$, yielding a boosted score of document~$d$ in ranking~$r$ by:
 \begin{equation}
