--- a/paper/ecir25-longeval-part2.tex
+++ b/paper/ecir25-longeval-part2.tex
@@ -4,4 +4,4 @@
 Temporal dynamics in web search are an established research topic. Websites change constantly, often more than hourly~\cite{DBLP:conf/wsdm/AdarTDE09}, making them only relevant for a limited time~\cite{DBLP:conf/sigir/TikhonovBBOKG13}. This relates directly to the observation that many queries are not unique but issued frequently~\cite{DBLP:conf/sigir/Dumais14,DBLP:journals/sigir/SilversteinHMM99}. Even the same users tend to repeat the same queries at different points in time~\cite{DBLP:conf/wsdm/TylerT10}.
 This motivates \emph{Temporal Information Retrieval}~(TIR) aiming to use temporal information to improve the ranking quality~\cite{DBLP:journals/ftir/KanhabuaBN15,DBLP:journals/csur/CamposDJJ14}, e.g., by using temporal patterns for the term weighting~\cite{DBLP:conf/wsdm/ElsasD10}.
 Given a set of target documents, a \emph{keyquery} is the minimal query that retrieves the target documents in the top positions~\cite{gollub:2013a,hagen:2016b}. Keyqueries use terms generated via RM3 or other query expansion approaches as vocabular for an efficient enumaration of candidates~\cite{froebe:2022c,froebe:2021c}. We use keyqueries as they, contrary to RM3, generate a ranking for each candidate to test if all criteria are fullfilled, thereby fully leveraging historical data.
-\emph{Evaluations in dynamic settings} is not trivial as temporal dynamics can strongly influence the effectiveness of IR systems. However, they are rarely  considered during evaluation. Soboroff~\cite{DBLP:conf/sigir/Soboroff06} initially investigated how temporal dynamics influence test collection evaluations and hypothesized how they could be maintained. Recently, the LongEval shared task~\cite{DBLP:conf/clef/AlkhalifaBDEAFG24,alkhalifa:2023} provides a test bed of an evolving web search scenario covering over a year. Changes in evolving test collections can be described via the application of create, update, and delete operations to documents, topics, and relevance judgments~\cite{keller:2024}.
+\emph{Evaluations in dynamic settings} is not trivial as temporal dynamics can strongly influence the effectiveness of IR systems. However, they are rarely  considered during evaluation. Soboroff~\cite{DBLP:conf/sigir/Soboroff06} initially investigated how temporal dynamics influence test collection evaluations and hypothesized how they could be maintained. Recently, the LongEval shared task~\cite{alkhalifa:2023,DBLP:conf/clef/AlkhalifaBDEAFG24} provides a test bed of an evolving web search scenario covering over a year. Changes in evolving test collections can be described via the application of create, update, and delete operations to documents, topics, and relevance judgments~\cite{keller:2024}.
