--- a/paper/ecir25-longeval.sty
+++ b/paper/ecir25-longeval.sty
@@ -9,6 +9,8 @@
 \usepackage{tabularx}
 \usepackage{booktabs} 
 \usepackage{multirow} 
+\usepackage{amsmath}
+
 % Used for displaying a sample figure. If possible, figure files should
 % be included in EPS format.
 %
